[tool.poetry]
name = "ask-astro"
version = "0.1.0"
description = ""
authors = ["Philippe Gagnon <12717218+pgagnon@users.noreply.github.com>"]
packages = [{include = "ask_astro"}]

[tool.poetry.dependencies]
python = "^3.11"
typing-extensions = "*"
pydash = "*"
aiohttp = {version = "*", extras=["speedups"]}
sanic = {extras = ["ext"], version = "^23.6.0"}
slack_bolt = "*"
langchain = "*"
openai = "*"
faiss-cpu = "*"
firebase-admin = "*"
jinja2 = "*"
zenpy = "*"
asyncstdlib = "*"
aiostream = "*"
tiktoken = "*"
aiofiles = "^23.2.1"
weaviate-client = "*"
pydantic = "^2.3.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
tenacity = "^8.2.3"
cohere = "==4.39"
sanic_limiter = { git = "https://github.com/Omegastick/sanic-limiter.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-sanic = "^1.0.0"
sanic-testing = "^23.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
